tests/NormalTests/paczka1/fuzzy1/58497409.err
Error in line 8: ZN2a9c S544 80,6
Error in line 9: aih4 A30 40,8
Error in line 22: A30 A618 51,5
Error in line 26: ZN2a9c A618 74,4
